初始化项目

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           node-version: "16.x"
           cache: "npm"
-      - run: npm i
+      - run: npm ci
       - run: npm run main
